--- a/app/src/package.json
+++ b/app/src/package.json
@@ -13,6 +13,7 @@
     "jshint": "^2.9.5",
     "node-arduino": "^1.7.3",
     "node-red-node-arduino": "0.0.18",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "socket.io": "^2.1.1"
   }
 }
